# node-tlsn-verifier

./: README.MD  package-lock.json  package.json  tsconfig.json
neon-verifier/: Cargo.toml  README.md  package.json
neon-verifier/src/: lib.rs
src/: index.ts  polyfill.js
src/fixtures/: attestation.json  example-json.attestation.tlsn  example-json.presentation.tlsn  example-json.secrets.tlsn  presentation.json  secrets.json  transcript.json
wasm/pkg/: package.json  tlsn_wasm.d.ts  tlsn_wasm.js  tlsn_wasm_bg.wasm.d.ts
wasm/pkg/snippets/web-spawn-0303048270a97ee1/js/: spawn.js
