[package]
name = "neon-verifier"
version = "0.0.1"
description = "TLSN v8 presentation verification on Node."
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
chrono = "0.4"
hex = { version = "0.4" }
base64 = "0.21"
tlsn-core = { git = "https://github.com/tlsnotary/tlsn.git", package = "tlsn-core" }
tls-server-fixture = { git = "https://github.com/tlsnotary/tlsn.git", package = "tlsn-server-fixture" }
tls-core = { git = "https://github.com/tlsnotary/tlsn.git", package = "tlsn-tls-core" }
tlsn-server-fixture-certs = { git = "https://github.com/tlsnotary/tlsn.git", package = "tlsn-server-fixture-certs" }